# PTOAS

./: .ci-seed  .gitignore  CMakeLists.txt  PTO_OPS_SPEC.md  README.md  ReleaseNotes.md  mul.cpp  mul_edited.cpp  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: cross-layer-sync.md  testing-and-examples.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_operation.yml  pass_bug.yml  performance_issue.yml
.github/scripts/: compute_ptoas_version.py
.github/workflows/: build_wheel.yml  build_wheel_mac.yml  ci.yml
cmake/: PTOASConfig.cmake.in
docker/: Dockerfile  README.md  bundle_bin.sh  collect_ptoas_dist.sh  collect_ptoas_dist_mac.sh  copy_ptoas_deps.sh  create_wheel.sh  ptoas_wrapper.py  setup.py  setup_mac.py  test_ptoas_cli.sh  test_wheel_imports.sh
docs/: 2026-03-07-tpush-tpop-op-interface-todo.md  2026-03-13-tpop-pipe-interface-spec-zh.md  PTO_IR_manual.md
docs/ir/: PTO-IR-vf-vops-design.md
include/PTO/IR/: PTO.h  PTOAttrs.td  PTOInterfaces.td  PTOOps.td  PTOTypeDefs.td
include/PTO/Transforms/: BlockSyncAnalysis.h  Passes.h  Passes.td  SyncCodegen.h
include/pto-c/Dialect/: PTO.h
lib/: CMakeLists.txt
lib/Bindings/Python/: CMakeLists.txt  PTOModule.cpp
lib/CAPI/Dialect/: PTO.cpp
lib/PTO/IR/: CMakeLists.txt  PTO.cpp  PTOAttrs.cpp  PTOTypeDefs.cpp
lib/PTO/Transforms/: BlockSyncAnalysis.cpp  BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  ConvertToPTOOp.cpp  EnableMultiBuffer.cpp  InferPTOLayout.cpp  InferPTOMemScope.cpp  InferPTOMemScope.h  InferPTOTileConfig.cpp  InsertLoadStoreForMixCV.cpp  LoweringSyncToPipe.cpp  MoveSyncState.cpp  PTOCanonicalizeVops.cpp  PTOConvert.cpp  PTOConvertToDPS.cpp  PTOHighDimLowering.cpp  PTOIRTranslator.cpp  PTOInsertCVMov.cpp  PTOInsertSync.cpp  PTOInsertTFreePass.cpp  PTOLowerTPopPass.cpp  PTOMarkMultiBuffer.cpp  PTOPlanMemory.cpp  PTOPlanMemory.h  PTORemoveRedundantBarrier.cpp  PTOToEmitC.cpp  PTOVerifyTFreePass.cpp  PTOViewToMemref.cpp  SyncCodegen.cpp  SyncEventIdAllocation.cpp  Utils.h
lib/PTO/Transforms/InsertSync/: InsertSyncAnalysis.cpp  InsertSyncDebug.cpp  MemoryDependentAnalyzer.cpp  MoveSyncState.cpp  MultiBufferSelector.cpp  PTOIRTranslator.cpp  PTOInsertSync.cpp  RemoveRedundantSync.cpp  SyncCodegen.cpp  SyncCommon.cpp  SyncEventIdAllocation.cpp
python/: CMakeLists.txt
python/pto/dialects/: PTOOps.td  pto.py
test/basic/: external_tile_call_a5.pto  external_tile_decl_a5.pto  get_fifo_tile_verify.mlir  initialize_pipe_verify_gm_missing.mlir  initialize_pipe_verify_gm_wrongtype.mlir  initialize_pipe_verify_local_wrongtype.mlir  insert_tfree_a2a3_noop.mlir  insert_tfree_basic.mlir  insert_tfree_no_uses.mlir  insert_tfree_skip_existing.mlir  matmul_tile_config_call_boundary_a5.pto  matmul_tile_config_infer_a3.pto  matmul_tile_config_infer_a5.pto  plan_memory_bind_tile_alias_liveness.mlir  plan_memory_for_iter_args_yield.mlir  plan_memory_fragmentation_hole_fit.mlir  plan_memory_fragmentation_two_holes.mlir  plan_memory_if_in_loop.mlir  plan_memory_if_yield.mlir  plan_memory_loop_in_if.mlir  plan_memory_loop_no_reuse_outer_live.mlir  plan_memory_nested_loops.mlir  plan_memory_no_reuse_overlap.mlir  plan_memory_peak_8_overlapping.mlir  plan_memory_peak_exact_capacity.mlir  plan_memory_reuse_sequential.mlir  plan_memory_scopes_independent.mlir  record_wait_event.mlir  record_wait_event_emit_event.mlir  set_validshape_if.mlir  set_validshape_memref_invalid.mlir  subset_infer_dynamic_offset.mlir  tfree_after_if.mlir  tfree_emitc_a2a3.mlir  tfree_emitc_a5.mlir  tfree_missing.mlir  tfree_multiple_outstanding.mlir  tfree_ops.mlir  tfree_use_after_free.mlir  tfree_verify.mlir  (+6 more)
test/compile_cpp/: README.md  abs_vec_core.cpp  compile_lib_full_flags.sh  compile_lib_minimum_flags.sh
test/frontend/: ast_transform.py  compare.sh  matmul_original.py  matmul_pythonic.py  matmul_pythonic_ast.py  pto_frontend.py
test/kernel_launch/: README.md  compile.sh  gen_cpp1d.cpp  gen_relu_1d.py  jit_util_add.py  load_and_run_relu.py  mul.cpp  mul.pto  mul_edited.cpp  relu_builder.py  relu_edited.cpp  relu_generated.cpp  run_1d.py  run_compiled_kernel.py  run_gen_1d.py  tiled_relu_1d.cpp  tiled_relu_2d.cpp
test/kernel_launch/cpp_tiled_relu/: run.py  tiled_relu.cpp
test/kernel_launch/dynamic/: gen_dyn.cpp  gen_dyn.py  jit_util_dyn.py  mlir_gen.pto  run_dyn.py  run_gen_dyn.py  tiled_relu_dyn.cpp
test/kernel_launch/tiled_relu/: lrelu.py  rel.pto  run.py  tiled_relu.cpp
test/npu/: .gitignore  REAME.md
test/npu/abs/: README.md  abs.py  compile.sh
test/npu/docker/: Dockerfile  README.md
test/npu_validation/scripts/: generate_testcase.py  run_remote_npu_validation.sh
test/npu_validation/templates/: compare_template.py  (+3 more)
test/samples/: runop.sh  validation_runtime.py
test/samples/Assemble/board_validation/: CMakeLists.txt  README.md  assemble_kernel.cpp  compare.py  golden.py  launch.cpp  main.cpp  run.sh
test/samples/FFN/npu_validation/: CMakeLists.txt  compare.py  ffn-pto-sync_kernel.cpp  ffn_act_kernel.cpp  ffn_fc1_kernel.cpp  ffn_fc2_kernel.cpp  golden.py  launch.cpp  launch_act.cpp  launch_fc1.cpp  launch_fc2.cpp  main.cpp  run.sh
test/samples/MatmulVectorMix/npu_validation/: CMakeLists.txt  compare.py  golden.py  launch.cpp  main.cpp  matmul_vector_mix-pto-sync_kernel.cpp  run.sh
test/tmp_tpush_tpop_matmul_pipe_a5/: README.md  kernel.mlir  kernel_a5_manual.cpp  main.cpp
test/tmp_tpush_tpop_matmul_pipe_loop4_a5/: README.md  kernel.mlir  kernel_a5_manual.cpp  main.cpp
tools/: CMakeLists.txt
tools/ptoas/: CMakeLists.txt  ptoas.cpp
tools/ptobc/: CMakeLists.txt  MAINTENANCE.md  README.md
tools/ptobc/include/ptobc/: canonical_printer.h  leb128.h  mlir_helpers.h  ptobc_decode.h  ptobc_format.h
tools/ptobc/src/: canonical_printer.cpp  leb128.cpp  main.cpp  mlir_encode.cpp  mlir_helpers.cpp  ptobc_decode_print.cpp  ptobc_format.cpp
tools/ptobc/testdata/: add_static_multicore.pto  matmul_static_singlecore.pto
tools/ptobc/tests/: CMakeLists.txt  opcode_coverage_check.py  ptobc_to_ptoas_smoke.sh  stage9_e2e.sh
(+355 files in other folders)
